--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,33 @@
-appnope==0.1.2
-asttokens==2.0.5
-backcall==0.2.0
-certifi==2020.12.5
-chardet==4.0.0
-cycler==0.10.0
-debugpy==1.5.1
-decorator==4.4.2
-entrypoints==0.4
-executing==0.8.3
-fonttools==4.29.1
-idna==2.10
-ipykernel==6.9.1
-ipython==8.1.0
-ipython-genutils==0.2.0
-jedi==0.18.0
-jupyter-client==7.1.2
-jupyter-core==4.9.2
-kiwisolver==1.3.1
-line-profiler==3.1.0
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-nest-asyncio==1.5.4
-numpy==1.21
-packaging==21.3
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pycodestyle==2.7.0
-pyflakes==2.3.1
-Pygments==2.8.1
-PyJWT==1.7.1
-pyparsing==2.4.7
-python-dateutil==2.8.1
-pytz==2020.5
-pyzmq==22.3.0
-requests==2.25.1
-six==1.15.0
-stack-data==0.2.0
-traitlets==5.1.1
-wcwidth==0.2.5
+attr==0.3.2
+brotli==1.0.9
+brotlicffi==1.0.9.2
+ConfigParser==5.3.0
+cryptography==38.0.4
+Cython==0.29.32
+dl==0.1.0
+docutils==0.19
+HTMLParser==0.0.2
+importlib_metadata==5.1.0
+ipython==8.7.0
+ipywidgets==8.0.2
+Jinja2==3.1.2
+jnius==1.1.0
+keyring==23.11.0
+lockfile==0.12.2
+lxml==4.9.1
+matplotlib==3.6.2
+mock==4.0.3
+numpy==1.23.0
+ordereddict==1.1
+Pillow==9.3.0
+protobuf==4.21.10
+pyOpenSSL==22.1.0
+railroad==0.5.0
+simplejson==3.18.0
+Sphinx==5.3.0
+toml==0.10.2
+tornado==6.2
+unicodedata2==15.0.0
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
+zipp==3.11.0
