--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
 certifi==2022.9.24
 charset-normalizer==2.1.1
+contourpy==1.1.1
+cycler==0.11.0
 docopt==0.6.2
+fonttools==4.42.1
 idna==3.4
+kiwisolver==1.4.5
+matplotlib==3.8.0
+numpy==1.26.0
+packaging==23.1
+Pillow==10.0.1
 pipreqs==0.4.11
+pyparsing==3.1.1
+python-dateutil==2.8.2
 requests==2.28.1
+six==1.16.0
+tk==0.1.0
 urllib3==1.26.13
 yarg==0.1.9
