--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
-certifi==2022.9.24
-charset-normalizer==2.1.1
-contourpy==1.1.1
-cycler==0.11.0
-docopt==0.6.2
-fonttools==4.42.1
-idna==3.4
-kiwisolver==1.4.5
-matplotlib==3.8.0
-numpy==1.26.0
-packaging==23.1
-Pillow==10.0.1
-pipreqs==0.4.11
-pyparsing==3.1.1
-python-dateutil==2.8.2
-requests==2.28.1
+altgraph==0.17.4
+contourpy==1.3.0
+cycler==0.12.1
+fonttools==4.53.1
+kiwisolver==1.4.7
+macholib==1.16.3
+matplotlib==3.9.2
+numpy==2.1.1
+packaging==24.1
+pillow==10.4.0
+pyinstaller==6.10.0
+pyinstaller-hooks-contrib==2024.8
+pyparsing==3.1.4
+python-dateutil==2.9.0.post0
+setuptools==74.1.2
 six==1.16.0
 tk==0.1.0
-urllib3==1.26.13
-yarg==0.1.9
